tests/baselines/reference/memberScope.errors.txt
==== tests/cases/compiler/memberScope.ts (1 errors) ====
    module Salt {
      export class Pepper {}
      export module Basil { }
      var z = Basil.Pepper;
              ~~~~~
!!! error TS2095: Could not find symbol 'Basil'.
    }
    
    